--- a/views/regist.html
+++ b/views/regist.html
@@ -81,6 +81,15 @@
 			        <input type="text" maxlength="10" class="form-control" id="u_tel" name="u_tel" oninvalid="this.setCustomValidity('กรอกเบอร์โทรที่นี่')" required oninput="this.setCustomValidity('')">
 			      </div>
 			    </div>
+			    <div class="col-md-12 mb-12">
+				      <label class="cv_keep-left" for="u_img">ที่อยู่</label>
+					    <div class="input-group">
+					        <div class="input-group-prepend">
+					          <span class="input-group-text" ><i class="fas fa-address-book"></i></span>
+					        </div>
+					        <textarea id="u_address" name="u_address" class="form-control" oninvalid="this.setCustomValidity('ที่อยู่')"required oninput="this.setCustomValidity('')"></textarea> 
+				      </div>
+				    </div>
 			    <div class="col-md-12 mb-3">
 			      <label class="cv_keep-left" for="Confirm Password">รูปภาพ</label>
 			      <div class="input-group">
