--- a/views/login.html
+++ b/views/login.html
@@ -4,13 +4,13 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/cv_style.css">
-  <script src="./js/jquery.min.js"></script>
-  <script src="./js/popper.min.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/cv_js.js?v=1001"></script>
-  <link href="./fontawesome/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/cv_style.css">
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/popper.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/cv_js.js?v=1002"></script>
+  <link href="../fontawesome/css/all.css" rel="stylesheet">
 </head>
 <body>
 <center>
@@ -18,7 +18,7 @@
 	<div class="card col-sm-12 col-md-6 ">
 		<div class="card-body">
 			<h1>login</h1>
-			<form>
+			<form id="frm_login">
 				<div class="form-group row">
 					<div class="input-group col-sm-12">
 						<div class="input-group-prepend">
